fixes typo and completed French language translation

--- a/openmetadata-ui/src/main/resources/ui/src/locale/languages/de-de.json
+++ b/openmetadata-ui/src/main/resources/ui/src/locale/languages/de-de.json
@@ -1519,7 +1519,7 @@
     "hex-code-placeholder": "Select or enter HEX color code.",
     "hex-color-validation": "Input is not valid HEX code.",
     "hi-user-welcome-to": "Hallo {{user}}, Willkommen bei",
-    "import-entity-help": "Sparen Sie Zeit und Aufwand, indem Sie eine CSV-Datei mit mehreren {{entity}} in einem Durchgang hochladen.",
+    "import-entity-help": "Sparen Sie Zeit und Aufwand, indem Sie eine CSV-Datei mit mehreren {{entityPlural}} in einem Durchgang hochladen.",
     "in-this-database": "In dieser Datenbank",
     "include-assets-message": "Aktivieren Sie das Extrahieren von {{assets}} aus der Datenquelle.",
     "include-database-filter-extra-information": "Die beim Erstellen des Dienstes hinzugefügte Datenbank.",
@@ -1545,7 +1545,7 @@
     "lineage-ingestion-description": "Die Verbindungsdaten-Erfassung kann konfiguriert und bereitgestellt werden, nachdem eine Metadaten-Erfassung eingerichtet wurde. Der Verbindungsdaten-Erfassungsworkflow ruft den Abfrageverlauf ab, analysiert Abfragen wie CREATE, INSERT, MERGE usw. und bereitet die Verbindung zwischen den beteiligten Entitäten vor. Die Verbindungsdaten-Erfassung kann nur eine Pipeline für einen Datenbankdienst haben. Definieren Sie die Dauer des Abfrageprotokolls (in Tagen) und die Ergebnisgrenze, um zu starten.",
     "link-copy-to-clipboard": "Link copied to clipboard",
     "list-of-strings-regex-patterns-csv": "Geben Sie eine Liste von Zeichenfolgen/Regex-Mustern als durch Kommas getrennte Werte ein.",
-    "login-fail-attempt-message": "Allowed attampt on consicutive failed login to application.",
+    "login-fail-attempt-message": "Allowed attempt on consecutive failed login to application.",
     "logout-confirmation": "Sind Sie sicher, dass Sie sich abmelden möchten?",
     "look-like-upgraded-om": "Look's like you have upgraded OpenMetadata",
     "made-announcement": "made an announcement",
@@ -1665,7 +1665,7 @@
     "page-sub-header-for-metadata": "Ingestion von Metadaten aus Metadatendiensten direkt über die Benutzeroberfläche.",
     "page-sub-header-for-ml-models": "Ingestion von Metadaten aus ML-Modell-Diensten über die Benutzeroberfläche.",
     "page-sub-header-for-om-health-configuration": "Check database access, ES health, Pipeline Service Client, jwks configuration and migrations",
-    "page-sub-header-for-persona": "Represent different persona that a user may have withing OpenMetadata.",
+    "page-sub-header-for-persona": "Represent different persona that a user may have within OpenMetadata.",
     "page-sub-header-for-pipelines": "Ingestion von Metadaten aus den am häufigsten verwendeten Pipeline-Diensten.",
     "page-sub-header-for-policies": "Definiere Richtlinien mit einer Reihe von Regeln für feinkörnige Zugriffssteuerung.",
     "page-sub-header-for-profiler-configuration": "Customize globally the behavior of the profiler by setting the metrics to compute based on columns data types",
