--- a/openmetadata-ui/src/main/resources/ui/src/locale/languages/en-us.json
+++ b/openmetadata-ui/src/main/resources/ui/src/locale/languages/en-us.json
@@ -1519,7 +1519,7 @@
     "hex-code-placeholder": "Select or enter HEX color code.",
     "hex-color-validation": "Input is not valid HEX code.",
     "hi-user-welcome-to": "Hi {{user}}, Welcome to",
-    "import-entity-help": "Save time & effort by uploading a CSV file with several {{entity}} in one go.",
+    "import-entity-help": "Save time & effort by uploading a CSV file with several {{entityPlural}} in one go.",
     "in-this-database": "In this Database",
     "include-assets-message": "Enable extracting {{assets}} from the data source.",
     "include-database-filter-extra-information": "Database which was added while creating service.",
@@ -1641,7 +1641,7 @@
     "no-widgets-to-add": "No new widgets to add",
     "nodes-per-layer-message": "Please enter a value for nodes per layer",
     "nodes-per-layer-tooltip": "Choose to display ‘n’ number of nodes per layer. If the existing nodes exceed the defined number of nodes, then pagination will be shown.",
-    "not-followed-anything": "Start Exploring! and Follow the Data Assets that interests you.",
+    "not-followed-anything": "Start Exploring! And Follow the Data Assets that interest you.",
     "notification-description": "Set up notifications to received real-time updates and timely alerts.",
     "om-description": "Centralized metadata store, to discover, collaborate and get your data right.",
     "onboarding-claim-ownership-description": "Data works well when it is owned. Take a look at the data assets that you own and claim ownership.",
@@ -1651,7 +1651,7 @@
     "optional-configuration-update-description-dbt": "Optional configuration to update the description from dbt or not",
     "page-is-not-available": "The page you are looking for is not available",
     "page-sub-header-for-activity-feed": "Activity feed that enables you view a summary of data change events.",
-    "page-sub-header-for-admins": "Known the fellow Admins in your organization, along with details on their respective teams and roles.",
+    "page-sub-header-for-admins": "Know the fellow Admins in your organization, along with details on their respective teams and roles.",
     "page-sub-header-for-advanced-search": "Discover the right data assets quickly using the syntax editor with and/or conditions.",
     "page-sub-header-for-bots": "Create well-defined bots with scoped access permissions.",
     "page-sub-header-for-column-profile": "Monitor and understand your columns structure with the profiler",
@@ -1763,7 +1763,7 @@
     "success-status-for-entity-deploy": "<0>{{entity}}</0>  has been {{entityStatus}} and deployed successfully",
     "successfully-completed-the-tour": "You’ve successfully completed the tour.",
     "synonym-placeholder": "To add a synonym, simply type it in and press Enter",
-    "system-tag-delete-disable-message": "Deleting a system generated tags is not allowed. You can try disabling the tag instead.",
+    "system-tag-delete-disable-message": "Deleting a system generated tag is not allowed. You can try disabling the tag instead.",
     "tag-update-confirmation": "Would you like to proceed with adding a new tag?",
     "take-quick-product-tour": "Take a product tour to get started!",
     "team-moved-success": "Team moved successfully!",
