--- a/openmetadata-ui/src/main/resources/ui/src/locale/languages/ru-ru.json
+++ b/openmetadata-ui/src/main/resources/ui/src/locale/languages/ru-ru.json
@@ -1519,7 +1519,7 @@
     "hex-code-placeholder": "Select or enter HEX color code.",
     "hex-color-validation": "Input is not valid HEX code.",
     "hi-user-welcome-to": "Привет, {{user}}! Добро пожаловать в",
-    "import-entity-help": "Сэкономьте время и усилия, загрузив CSV-файл с несколькими {{entity}} за один раз.",
+    "import-entity-help": "Сэкономьте время и усилия, загрузив CSV-файл с несколькими {{entityPlural}} за один раз.",
     "in-this-database": "В этой базе данных",
     "include-assets-message": "Включите извлечение {{assets}} из источника данных.",
     "include-database-filter-extra-information": "База данных, которая была добавлена при создании сервиса.",
@@ -1545,7 +1545,7 @@
     "lineage-ingestion-description": "Прием данных о происхождении можно настроить и развернуть после настройки приема метаданных. Рабочий процесс приема происхождения получает историю запросов, анализирует запросы CREATE, INSERT, MERGE... и подготавливает происхождение между вовлеченными сущностями. У приема происхождения может быть только один конвейер для службы базы данных. Определите продолжительность журнала запросов (в днях) и лимит результатов для запуска.",
     "link-copy-to-clipboard": "Link copied to clipboard",
     "list-of-strings-regex-patterns-csv": "Введите список строк/шаблонов регулярных выражений в виде значения, разделенного запятыми.",
-    "login-fail-attempt-message": "Allowed attampt on consicutive failed login to application.",
+    "login-fail-attempt-message": "Allowed attempt on consecutive failed login to application.",
     "logout-confirmation": "Вы уверены, что хотите выйти из системы?",
     "look-like-upgraded-om": "Look's like you have upgraded OpenMetadata",
     "made-announcement": "made an announcement",
@@ -1665,7 +1665,7 @@
     "page-sub-header-for-metadata": "Получайте метаданные из служб метаданных прямо из пользовательского интерфейса.",
     "page-sub-header-for-ml-models": "Принимать метаданные из служб модели машинного обучения через пользовательский интерфейс.",
     "page-sub-header-for-om-health-configuration": "Check database access, ES health, Pipeline Service Client, jwks configuration and migrations",
-    "page-sub-header-for-persona": "Represent different persona that a user may have withing OpenMetadata.",
+    "page-sub-header-for-persona": "Represent different persona that a user may have within OpenMetadata.",
     "page-sub-header-for-pipelines": "Принимать метаданные из наиболее часто используемых конвейерных служб.",
     "page-sub-header-for-policies": "Определите политики с набором правил для точного контроля доступа.",
     "page-sub-header-for-profiler-configuration": "Customize globally the behavior of the profiler by setting the metrics to compute based on columns data types",
