--- a/openmetadata-ui/src/main/resources/ui/src/locale/languages/zh-cn.json
+++ b/openmetadata-ui/src/main/resources/ui/src/locale/languages/zh-cn.json
@@ -1545,7 +1545,7 @@
     "lineage-ingestion-description": "在设置元数据提取后，可以配置并部署血缘提取。血缘提取工作流获取查询历史记录，解析 CREATE、INSERT、MERGE... 查询，并整理相关实体之间的血缘。一个数据库服务只能定义一个血缘提取工作流。定义查询日志持续时间（天数）和结果限制即可开始。",
     "link-copy-to-clipboard": "Link copied to clipboard",
     "list-of-strings-regex-patterns-csv": "以逗号分隔的值的形式输入字符串/正则表达式列表",
-    "login-fail-attempt-message": "Allowed attampt on consicutive failed login to application.",
+    "login-fail-attempt-message": "Allowed attempt on consecutive failed login to application.",
     "logout-confirmation": "您确定要注销登录吗?",
     "look-like-upgraded-om": "Look's like you have upgraded OpenMetadata",
     "made-announcement": "made an announcement",
@@ -1665,7 +1665,7 @@
     "page-sub-header-for-metadata": "通过 UI 界面，从元数据类型服务中提取元数据",
     "page-sub-header-for-ml-models": "通过 UI 界面，从 ML 模型类型服务中提取元数据",
     "page-sub-header-for-om-health-configuration": "Check database access, ES health, Pipeline Service Client, jwks configuration and migrations",
-    "page-sub-header-for-persona": "Represent different persona that a user may have withing OpenMetadata.",
+    "page-sub-header-for-persona": "Represent different persona that a user may have within OpenMetadata.",
     "page-sub-header-for-pipelines": "从最常用的工作流类型服务中提取元数据",
     "page-sub-header-for-policies": "通过组合一系列规则定义权限策略以精细化控制访问权限",
     "page-sub-header-for-profiler-configuration": "Customize globally the behavior of the profiler by setting the metrics to compute based on columns data types",
