--- a/openmetadata-ui/src/main/resources/ui/src/locale/languages/ja-jp.json
+++ b/openmetadata-ui/src/main/resources/ui/src/locale/languages/ja-jp.json
@@ -1519,7 +1519,7 @@
     "hex-code-placeholder": "Select or enter HEX color code.",
     "hex-color-validation": "Input is not valid HEX code.",
     "hi-user-welcome-to": "Hi {{user}}, Welcome to",
-    "import-entity-help": "Save time & effort by uploading a CSV file with several {{entity}} in one go.",
+    "import-entity-help": "Save time & effort by uploading a CSV file with several {{entityPlural}} in one go.",
     "in-this-database": "In this Database",
     "include-assets-message": "データソースから{{assets}}の抽出を有効にする。",
     "include-database-filter-extra-information": "Database which was added while creating service.",
@@ -1545,7 +1545,7 @@
     "lineage-ingestion-description": "Lineage ingestion can be configured and deployed after a metadata ingestion has been set up. The lineage ingestion workflow obtains the query history, parses CREATE, INSERT, MERGE... queries and prepares the lineage between the involved entities. The lineage ingestion can have only one pipeline for a database service. Define the Query Log Duration (in days) and Result Limit to start.",
     "link-copy-to-clipboard": "Link copied to clipboard",
     "list-of-strings-regex-patterns-csv": "Enter a list of strings/regex patterns as a comma separated value",
-    "login-fail-attempt-message": "Allowed attampt on consicutive failed login to application.",
+    "login-fail-attempt-message": "Allowed attempt on consecutive failed login to application.",
     "logout-confirmation": "Are you sure you want to logout?",
     "look-like-upgraded-om": "Look's like you have upgraded OpenMetadata",
     "made-announcement": "made an announcement",
@@ -1665,7 +1665,7 @@
     "page-sub-header-for-metadata": "Ingest metadata from metadata services right from the UI.",
     "page-sub-header-for-ml-models": "Ingest metadata from ML Model services through the UI.",
     "page-sub-header-for-om-health-configuration": "Check database access, ES health, Pipeline Service Client, jwks configuration and migrations",
-    "page-sub-header-for-persona": "Represent different persona that a user may have withing OpenMetadata.",
+    "page-sub-header-for-persona": "Represent different persona that a user may have within OpenMetadata.",
     "page-sub-header-for-pipelines": "Ingest metadata from the most used pipeline services.",
     "page-sub-header-for-policies": "Define policies with a set of rules for fine-grained access control.",
     "page-sub-header-for-profiler-configuration": "Customize globally the behavior of the profiler by setting the metrics to compute based on columns data types",
