--- a/openmetadata-ui/src/main/resources/ui/src/locale/languages/nl-nl.json
+++ b/openmetadata-ui/src/main/resources/ui/src/locale/languages/nl-nl.json
@@ -1519,7 +1519,7 @@
     "hex-code-placeholder": "Selecteer of voer de HEX-kleurcode in.",
     "hex-color-validation": "Invoer is geen geldige HEX-code.",
     "hi-user-welcome-to": "Hoi {{user}}, welkom bij",
-    "import-entity-help": "Bespaar tijd en moeite door een CSV-bestand te uploaden met verschillende {{entity}} in één keer.",
+    "import-entity-help": "Bespaar tijd en moeite door een CSV-bestand te uploaden met verschillende {{entityPlural}} in één keer.",
     "in-this-database": "In deze database",
     "include-assets-message": "Schakel het extraheren van {{assets}} uit de databron in.",
     "include-database-filter-extra-information": "Database die is toegevoegd tijdens het maken van de service.",
