--- a/openmetadata-ui/src/main/resources/ui/src/locale/languages/pt-br.json
+++ b/openmetadata-ui/src/main/resources/ui/src/locale/languages/pt-br.json
@@ -1519,7 +1519,7 @@
     "hex-code-placeholder": "Selecione ou insira o código de cor HEX.",
     "hex-color-validation": "A entrada não é um código HEX válido.",
     "hi-user-welcome-to": "Olá {{user}}, Bem-vindo(a) ao",
-    "import-entity-help": "Economize tempo e esforço fazendo upload de um arquivo CSV com vários {{entity}} de uma só vez.",
+    "import-entity-help": "Economize tempo e esforço fazendo upload de um arquivo CSV com vários {{entityPlural}} de uma só vez.",
     "in-this-database": "Neste Banco de Dados",
     "include-assets-message": "Habilite a extração de {{assets}} da fonte de dados.",
     "include-database-filter-extra-information": "Banco de dados que foi adicionado ao criar o serviço.",
